force-app/main/default/objects/Contact/fields/EducationalBackground__c.field-meta.xml
<CustomField>
    <fullName>EducationalBackground__c</fullName>
    <label>学歴</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>