force-app/main/default/objects/Contact/fields/Hobby__c.field-meta.xml
<CustomField>
    <fullName>Hobby__c</fullName>
    <label>趣味</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>