force-app/main/default/objects/Contact/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>Account.OfficeName_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>事業所名</label>
    <type>Text</type>
</CustomField>