force-app/main/default/objects/Contact/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>好み</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>