force-app/main/default/objects/Contact/fields/ResumeFlag__c.field-meta.xml
<CustomField>
    <fullName>ResumeFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>経歴書あり</label>
    <type>Checkbox</type>
</CustomField>