force-app/main/default/objects/Contact/fields/Retirement__c.field-meta.xml
<CustomField>
    <fullName>Retirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退職</label>
    <type>Checkbox</type>
</CustomField>