force-app/main/default/objects/Contact/fields/Sansan_CI__CI_PersonId_FK__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_PersonId_FK__c</fullName>
    <externalId>true</externalId>
    <label>CI 人物 ID(システム)</label>
    <length>31</length>
    <type>Text</type>
</CustomField>