force-app/main/default/objects/Contact/fields/Sansan_CI__CreatedFromBizCardId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CreatedFromBizCardId__c</fullName>
    <label>作成元名刺レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>