force-app/main/default/objects/Contact/fields/Sansan_CI__CreatedFromSansanBizCardId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CreatedFromSansanBizCardId__c</fullName>
    <label>作成元名刺ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>