force-app/main/default/objects/Contact/fields/Sansan_CI__Sansan_PersonId_FK__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_PersonId_FK__c</fullName>
    <externalId>true</externalId>
    <label>Sansan 人物 ID(システム)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>