force-app/main/default/objects/Contact/fields/Sansan_CI__Tags__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Tags__c</fullName>
    <label>タグ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>